--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,4 +1,5 @@
 name: spread
+base: core20
 version: 2018.08.21
 summary: Convenient full-system test (task) distribution
 description: |
@@ -21,5 +22,5 @@ apps:
 parts:
     spread:
         plugin: go
-        go-packages:
-            - github.com/snapcore/spread/cmd/spread
+        source-type: git
+        source: https://github.com/snapcore/spread
